--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,10 @@ h4 {
   @apply font-medium;
 }
 
+.blog-content p {
+  @apply indent-4 py-2;
+}
+
 .prose > :first-child {
   /* Override removing top margin, causing layout shift */
   margin-top: 1.25em !important;
